Highlight availability segments and choose people manually to view
